# gothenburg

./: .gitignore  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  README  build.sh  configure.in  gen-configure.sh  report.sh
report/: CodeCoverage_Report.txt  Profiling_Report.txt  UnitTest_Report.txt
resources/: Makefile.am  gbg_raw.db  projectstestfoo.cs
src/: Asset.cs  AssetProvider.cs  DBOperations.cs  DataLayer.cs  Gothenburg.cs  Gui.cs  Icon.xpm  Makefile.am  Project.cs  ProjectWindow.cs  gothenburg.cs
test/: AssetProviderTests.cs  DBOperationsTests.cs  DBoperationsTests.cs  Makefile.am  db_operationsTests.cs  gbg.db
